# ai_manager

./: .gitignore  README.md
admin-backend/: .gitignore  README.md  kill-port.ps1  pom.xml  run.ps1  settings-aliyun.xml
admin-backend/admin-common/: pom.xml
admin-backend/admin-framework/: pom.xml
admin-backend/admin-server/: pom.xml
admin-backend/admin-system/: pom.xml
admin-backend/docs/: 笔记本功能规划.md
admin-backend/scripts/: baidu_pan_reorganize.py  migrate_ecommerce_images.py  rename_ecommerce_image_names.py  sync_ecommerce_images_to_pan.py
admin-backend/sql/: _encoding_preamble.sql  all_table_comment_fix.sql  deploy-all.sql  ec_carton_illustration_alter.sql  ec_carton_material_express_alter.sql  (+59 more)
admin-web/: .env.development  .env.production  .gitignore  README.md  index.html  index_pc.html  kill-port.ps1  mobile.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
deploy/: README.md
docs/: architecture.md  raspberry-pi-deploy.md  vscode-scroll-position-fix.md  websocket_protocol.md  电商平台优化第一期3.md  电商平台第一期优化.md  电商平台第一期优化2.md  电商数据迁移对照-kyle-e-commerce.md  电商月结统计.md
firmware/esp32_s3_lvgl/main/: CMakeLists.txt  app_shell.cpp  display.cpp  gt911_touch.cpp  idf_component.yml  main.cpp  pomodoro_api_client.cpp  ui.cpp  ui_common.cpp  websocket_client.cpp  wifi_manager.cpp
firmware/esp32_s3_lvgl/main/fonts/: font_chinese_20.c  font_chinese_28.c
firmware/esp32_s3_lvgl/main/fonts/source/: README.md
firmware/esp32_s3_lvgl/main/include/: app_shell.h  display.h  gt911_touch.h  panel_config.h  pomodoro_api_client.h  ui.h  ui_common.h  websocket_client.h  wifi_manager.h
firmware/esp32_s3_lvgl/main/include/modules/: music_module.h  pomodoro_module.h
firmware/esp32_s3_lvgl/main/modules/: music_module.cpp  pomodoro_module.cpp
firmware/esp32_s3_sub_display/main/: CMakeLists.txt  Kconfig.projbuild  app_clock.cpp  app_power.cpp  app_settings.cpp  app_ui.cpp  assets_loader.cpp  board_io.cpp  display.cpp  gt911_touch.cpp  idf_component.yml  main.cpp  pixel_ui.cpp  pomodoro_api_config.cpp  pomodoro_bar.cpp  pomodoro_model.cpp  pomodoro_plan_cache.cpp  pomodoro_sync.cpp  sd_storage.cpp  ui_home_static_layout.c  wifi_sta.cpp
firmware/esp32_s3_sub_display/main/assets_embed/: assets_seed.cpp  assets_seed.h  k_seed_assets_deco_diamond_blue_png.c  k_seed_assets_deco_diamond_png.c  k_seed_assets_dock_home_png.c  k_seed_assets_dock_lock_png.c  k_seed_assets_dock_lyrics_png.c  k_seed_assets_dock_pomo_png.c  k_seed_assets_dock_settings_png.c  k_seed_assets_icon_eq_png.c  k_seed_assets_icon_lock_png.c  k_seed_assets_icon_unlock_png.c  k_seed_assets_icon_wifi_png.c  k_seed_assets_tomato_png.c  k_seed_lyrics_current_meta.c  k_seed_lyrics_current_txt.c  ui_embed_images.cpp  ui_embed_images.h  ui_img_deco_diamond.c  ui_img_deco_diamond_blue.c  ui_img_dock_home.c  ui_img_dock_lock.c  ui_img_dock_lyrics.c  ui_img_dock_pomo.c  ui_img_dock_settings.c  ui_img_dock_sleep.c  ui_img_icon_eq.c  ui_img_icon_lock.c  ui_img_icon_unlock.c  ui_img_icon_wifi.c  ui_img_tomato.c
firmware/esp32_s3_sub_display/main/fonts/: gb2312_font_parts.cmake  lv_font_cn_16.c  lv_font_cn_gb2312_16_0.c  lv_font_cn_gb2312_16_1.c  lv_font_cn_gb2312_16_2.c  lv_font_cn_gb2312_16_3.c  lv_font_cn_gb2312_16_4.c  lv_font_cn_gb2312_16_5.c  lv_font_cn_gb2312_16_6.c  lv_font_cn_gb2312_16_7.c
firmware/esp32_s3_sub_display/main/include/: app_clock.h  app_power.h  app_settings.h  app_ui.h  assets_loader.h  board_io.h  lv_conf.h  lv_font_cn_16.h  lv_font_cn_gb2312.h  panel_config.h  pixel_ui.h  pomodoro_api_config.h  pomodoro_bar.h  pomodoro_model.h  pomodoro_plan_cache.h  pomodoro_sync.h  sd_assets.h  sd_storage.h  ui_home_static_layout.h  wifi_sta.h
pc_daemon/: README.md  config.yaml  main.py  requirements.txt
(+789 files in other folders)
